syntax = "proto3";
import "playcards/proto/room/room.proto";

package niuniu;

//结构体
message BankerAndBet {
    int32 BankerScore = 1;
    int32 BetScore = 2;
    int32 Role = 3;
}

message UserCard {
    string CardType = 1;
    repeated string CardList = 2;
}

message NiuniuUserResult {
    int32 UserID = 1;
    BankerAndBet Info = 2;
    UserCard Cards = 3;
    string Score = 4;
    int32 Status = 5;
    int32 PushOnBet = 6;
}

message NiuniuRoomResult {
    int32 RoomID = 1;
    int32 Status = 2;
    repeated NiuniuUserResult List = 3;
    repeated int32 Ids = 4;
}

message GameResultListReply {
    repeated NiuniuRoomResult List = 1;
}

message NiuniuRequest {
    int32 RoomID = 1;
}

message NiuniuReply {
    int32 Status = 1;
    NiuniuRoomResult Result = 2;
}

message GetBanker {
    int32 UserID = 1;
    int32 Key = 2;
}

//请求
message GetBankerRequest {
    int32 Key = 1;
}

message SetBetRequest {
    int32 Key = 1;
}

message SubmitCardRequest {

}

message GameResultListRequest {
    int32 RoomID = 1;
}

//回应
message DefaultReply {
    int32 Result = 1;
}

//游戏恢复
message NiuniuRecoveryRequest {
    int32 UserID = 1;
    int32 RoomID = 2;
}

//广播
message NiuniuGameStart {
    int32 Role = 1;
    repeated string CardList = 2;
    int32 BankerID = 3;
    int32 UserID = 4;
    int32 RoomStatus = 5;
    int32 GameStatus = 6;
    int32 PushOnBet = 7;
    CountDown CountDown = 8;
    int32 Index = 9;
}

message BeBanker {
    int32 BankerID = 1;
    int32 GameStatus = 2;
    repeated GetBanker List = 3;
    repeated int32 Ids = 4;
    CountDown CountDown = 5;
}

message AllBet {
    int32 Status = 1;
    int32 UserID = 2;
    string Card = 3;
    CountDown CountDown = 4;
}

message SetBet {
    int32 UserID = 1;
    int32 Key = 2;
    int32 PushOnBet = 3;
    repeated int32 Ids = 4;
}

message GameReady {
    int32 UserID = 1;
    string CardType = 2;
    repeated string CardList = 3;
    repeated int32 Ids = 4;
}

//倒计时结构体
message CountDown {
    int64 ServerTime = 1; //服务器时间
    int32 Count = 2; //倒计时秒数
}

message NiuniuRecoveryReply {
    room.CheckRoomExistReply RoomExist = 1; //房间信息
    NiuniuRoomResult NiuniuExist = 2; //牛牛
    CountDown CountDown = 3;
}

service NiuniuSrv {
    rpc GetBanker (GetBankerRequest) returns (DefaultReply) {
    }
    rpc SetBet (SetBetRequest) returns (DefaultReply) {
    }
    rpc Submit (SubmitCardRequest) returns (DefaultReply) {
    }
    rpc GameResultList (GameResultListRequest) returns (GameResultListReply) {
    }
    rpc NiuniuRecovery (NiuniuRecoveryRequest) returns (NiuniuRecoveryReply) {
    }
}